trying to fix font on safari

--- a/public/assets/css/custom-style.css
+++ b/public/assets/css/custom-style.css
@@ -5,10 +5,12 @@ html, body {
     padding: 0px;
     overflow-x: hidden;
     /* background-color: black; */
+    -webkit-font-smoothing: subpixel-antialiased;
+
 
 }
 p {
-    -webkit-font-smoothing: antialiased;
+    /* -webkit-font-smoothing: antialiased; */
 
 }
 .navbar{
